2006-02-07  Nathan Sidwell  <nathan@codesourcery.com>

	* testsuite/gas/m68k/all.exp: Add arch-cpu-1 test.
	* testsuite/gas/m68k/arch-cpu-1.[sd]: New.

2005-02-02  Paul Brook  <paul@codesourcery.com>

	* gas/arm/thumb2_invert.d: New test.
	* gas/arm/thumb2_invert.s: New test.

2006-01-31  Paul Brook  <paul@codesourcery.com>

	* gas/testsuite/gas/arm/iwmmxt-bad.s: Add check for bad register name.
	* gas/testsuite/gas/arm/iwmmxt-bad.l: Ditto.

2006-01-18  Arnold Metselaar  <arnoldm@sourceware.org>

	* gas/z80/z80.exp: Add offset.
	* gas/z80/offset.d: New file.
	* gas/z80/offset.s: New file.

2006-01-16  Paul Brook  <paul@codesourcery.com>

	* gas/m68k/all.exp: Add mcf-fpu.
	* gas/m68k/mcf-fpu.d: New file.
	* gas/m68k/mcf-fpu.s: New file.

2006-01-11  Nick Clifton  <nickc@redhat.com>

	* gas/tic54x/address.d: Work with 64bit hosts.
	* gas/tic54x/addrfar.d: Likewise.
	* gas/tic54x/align.d: Likewise.
	* gas/tic54x/all-opcodes.d: Likewise.
	* gas/tic54x/asg.d: Likewise.
	* gas/tic54x/cons.d: Likewise.
	* gas/tic54x/consfar.d: Likewise.
	* gas/tic54x/extaddr.d: Likewise.
	* gas/tic54x/field.d: Likewise.
	* gas/tic54x/labels.d: Likewise.
	* gas/tic54x/loop.d: Likewise.
	* gas/tic54x/lp.d: Likewise.
	* gas/tic54x/macro.d: Likewise.
	* gas/tic54x/math.d: Likewise.
	* gas/tic54x/opcodes.d: Likewise.
	* gas/tic54x/sections.d: Likewise.
	* gas/tic54x/set.d: Likewise.
	* gas/tic54x/struct.d: Likewise.
	* gas/tic54x/subsym.d: Likewise.

2006-01-09  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/2117
	* gas/ia64/ia64.exp: Add ltoff22x-2, ltoff22x-3, ltoff22x-4 and
	ltoff22x-5.

	* gas/ia64/ltoff22x-2.d: New file.
	* gas/ia64/ltoff22x-2.s: Likewise.
	* gas/ia64/ltoff22x-3.d: Likewise.
	* gas/ia64/ltoff22x-3.s: Likewise.
	* gas/ia64/ltoff22x-4.d: Likewise.
	* gas/ia64/ltoff22x-4.s: Likewise.
	* gas/ia64/ltoff22x-5.d: Likewise.
	* gas/ia64/ltoff22x-5.s: Likewise.

2006-01-03  Hans-Peter Nilsson  <hp@bitrange.com>

	PR gas/2101
	* gas/mmix/hex2.s, gas/mmix/hex2.d: New test.
