@@ -1,3 +1,11 @@
+2006-02-11  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/i386.exp: Add "x86-64-crx" and "x86-64-crx-suffix".
+
+	* gas/i386/x86-64-crx-suffix.d: New file.
+	* gas/i386/x86-64-crx.d: Likewise.
+	* gas/i386/x86-64-crx.s: Likewise.
+
 2006-02-07  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* testsuite/gas/m68k/all.exp: Add arch-cpu-1 test.
